Fix fullscreen mobile - main overflow

--- a/src/app.css
+++ b/src/app.css
@@ -18,8 +18,6 @@ body {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  
-  text-align: left;
   background-color: #fff;
   overflow: hidden;
 }
@@ -51,19 +49,12 @@ a {
   grid-template-areas:
   "sidebar nav nav nav"
   "sidebar main main main";
-
-  /* grid-gap: 0.2rem; */
-  /* overflow-y: auto; */
 }
 
 main {
   grid-area: main;
   padding: 15px 20px 10px 20px;
   overflow-y: auto;
-  
-  /* background: #f3f4f6; */
-  /* margin: 15px 5vw */
-
   overflow-x: hidden;
 }
 
@@ -92,6 +83,7 @@ footer {
   }
 
   main {    
-    overflow-y: unset;
+    overflow: unset;
+    width: inherit;
   }
 }
